# maternal-electome-EF

./: .gitignore  00_data_preprocessing.ipynb  CLEANUP_LOG.md  LICENSE  LickingVsNonLicking_3band.ipynb  PreVsPost134_1Hz.ipynb  README.md  dCSFA_NMF_Ver3.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: demo-smoke.yml
examples/: demo.ipynb  generate_demo_data.py  simulated_data.py  vignette.ipynb
examples/demo_data/: __init__.py  demo_3band.pkl  generate.py
models/: LickingVsGrooming_3band.pt  LickingVsNonLicking_3band.pt  OnnestVsOffnest_1Hz.pt  OnnestVsOffnest_3band.pt  PreVsPost134_1Hz.pt  PreVsPost134_3band.pt  README.md
notebooks/: 00_data_preprocessing.ipynb  LickingVsGrooming_3band.ipynb  LickingVsNonLicking_3band.ipynb  OnnestVsOffnest_1Hz.ipynb  OnnestVsOffnest_3band.ipynb  PreVsPost134_1Hz.ipynb  PreVsPost134_3band.ipynb
scripts/: convert_models_to_portable.py
src/: analysis.py  models_registry.py  sara_requests.py  training.py  viz.py  workflow.py
src/electome/: __init__.py  additional_analyses.py  dCSFA_NMF_Ver1.py  data_utils.py  dataset_assembly.py  lfp_features.py  models_registry.py  sara_requests.py  training.py  viz.py  workflow.py
