[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electome"
version = "0.1.0"
description = "Maternal Electome Factors — dCSFA-NMF code & paper-active models"
readme = "README.md"
requires-python = ">=3.8,<3.14"
authors = [
    { name = "Elaine Yilin Wang" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Core scientific stack. The shipped .pt files store
    # ``{state_dict, config}`` dicts (see
    # ``scripts/convert_models_to_portable.py``) so the loader is
    # decoupled from torch's pickle internals — any torch ≥ 1.10 on any
    # Python in ``requires-python`` can reconstruct the model
    # bit-exactly. Lower bounds chosen to match the actual API surface
    # this codebase uses; no upper bounds.
    "numpy>=1.21",
    "pandas>=1.4",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "torch>=1.10",
    # Provides torchbd.loss.BetaDivLoss for the NMF reconstruction loss
    "beta-divergence-metrics",
    # Plotting
    "matplotlib>=3.5",
    "seaborn>=0.11",
    # Utilities
    "tqdm>=4.62",
    "joblib>=1.1",
    "openpyxl>=3.0",
    # Jupyter for the examples/demo.ipynb walkthrough
    "jupyter",
    "notebook",
]

[project.optional-dependencies]
# Carlson Lab LFP utilities, only needed by
# notebooks/00_data_preprocessing.ipynb (the raw .mat -> .pkl feature
# extraction step). The lpne setup.py imports numpy at build time, so
# it cannot live in the core `dependencies` list -- pip would try to
# build lpne before installing numpy and fail. Install with::
#
#     pip install -e ".[preprocessing]"
preprocessing = [
    "lpne @ git+https://github.com/carlson-lab/lpne.git",
]

[project.urls]
Homepage = "https://github.com/ElaineYilinW/maternal-electome-EF"

[tool.setuptools.packages.find]
where = ["src"]
include = ["electome*"]
